// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD hWAVnn"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb cnkWxE"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb gfXCUj"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb lmDfKJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD dmAYAz"
      size="small"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb hkZUgp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb evwOKC"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb fMhOMw"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb cnkWxE"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb cnkWxE"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb gfXCUj"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb cnkWxE"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb gfXCUj"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb lmDfKJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb cnkWxE"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb lmDfKJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb gfXCUj"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb gfXCUj"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb lmDfKJ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb hkZUgp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb hkZUgp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb evwOKC"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb hkZUgp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb evwOKC"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb fMhOMw"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb hkZUgp"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb fMhOMw"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb evwOKC"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-chuuOD jhMiFl"
    >
      <div
        className="sc-jEsDcK cXTZYG"
      >
        <div
          className="sc-jgqQmc evokbC"
        >
          <button
            className="sc-hyLtxb evwOKC"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-hruBXm cPBWwz"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jgqQmc evokbC"
      >
        <button
          className="sc-hyLtxb fMhOMw"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-hruBXm cPBWwz"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
